--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^14.0.0",
     "@babylonjs/core": "^5.52.0",
     "@babylonjs/loaders": "^5.52.0",
+    "@types/cannon": "^0.1.8",
     "bootstrap": "^5.2.3",
+    "cannon": "^0.6.2",
     "expo": "^44.0.6",
     "jquery": "^3.6.4",
     "node": "^19.8.1",
