--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cannon": "^0.1.8",
     "bootstrap": "^5.2.3",
     "cannon": "^0.6.2",
+    "colyseus.js": "^0.15.9",
     "expo": "^44.0.6",
     "jquery": "^3.6.4",
     "node": "^19.8.1",
